refactor: blockstate and blockproperty